0:Erabiltzaileak pausuen ordena aldatu dezake

--- a/oinarrizko_app_maketa/src/style.css
+++ b/oinarrizko_app_maketa/src/style.css
@@ -131,3 +131,8 @@ button:active {
 video::-webkit-media-controls {
   display: none;
 }
+
+.gora,.behera {
+	box-shadow: null;
+	background: white;
+}
