0:Pausuak gehitu eta kendu

--- a/oinarrizko_app_maketa/src/style.css
+++ b/oinarrizko_app_maketa/src/style.css
@@ -132,7 +132,7 @@ video::-webkit-media-controls {
   display: none;
 }
 
-.gora,.behera {
+.gora,.behera,.kendu {
 	box-shadow: null;
 	background: white;
 }
