--- a/oinarrizko_app_maketa/src/estiloa.css
+++ b/oinarrizko_app_maketa/src/estiloa.css
@@ -1,3 +1,4 @@
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
 *{
 	font-family: helvetica;
 }
@@ -39,3 +40,16 @@ table, th, td{
 .submit:active{
 	box-shadow:inset 0 0.6em 2em -0.3em rgba(0,0,0,0.15),inset 0 0 0em 0.05em rgba(255,255,255,0.12);
 }
+
+/*aukera*/
+
+.ezkutatu{
+	display:none;
+}
+
+.bistaratu{
+	display: contents;
+}
+
+
+
