--- a/oinarrizko_app_maketa/src/style.css
+++ b/oinarrizko_app_maketa/src/style.css
@@ -1,3 +1,5 @@
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
+
 *{
 	font-family: helvetica;
 }
@@ -217,7 +219,6 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-
 /*BOTOIAK*/
 .bideoAukera{
 	width:100%;
@@ -243,3 +244,7 @@ input:checked + .slider:before {
 	padding-left: 8px;
 
 }
+
+
+
+
