--- a/oinarrizko_app_maketa/src/estiloa.css
+++ b/oinarrizko_app_maketa/src/estiloa.css
@@ -1,4 +1,5 @@
-@import "https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css";
+
 *{
 	font-family: helvetica;
 }
