--- a/proba/www/css/style.css
+++ b/proba/www/css/style.css
@@ -249,6 +249,38 @@ input:checked + .slider:before {
 }
 */
 
+.goran{
+	position: fixed; /* Set the navbar to fixed position */
+  	top: 0; /* Position the navbar at the top of the page */
+  	margin-bottom:100px;
+  	width: 100%;
+  	overflow: hidden;
+  	background-color: white;
+  	z-index:100;
+}
+.behekoa{
+	width:100%;
+	padding-top: 156px;
+  	margin-top: 30px;
+}
+
+.goranE{
+	position: fixed; /* Set the navbar to fixed position */
+  	top: 0; /* Position the navbar at the top of the page */
+  	margin-bottom:200px;
+  	width: 100%;
+  	overflow: hidden;
+  	background-color: white;
+  	z-index:100;
+}
+
+.behekoaE{
+	width:100%;
+	padding-top: 156px;
+  	margin-top: 30px;
+}
+
+
 
 
 
