--- a/oinarrizko_app_maketa/src/estiloa.css
+++ b/oinarrizko_app_maketa/src/estiloa.css
@@ -1,7 +1,7 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css";
 
 *{
-	font-family: helvetica;
+	font-family: sans-serif;
 }
 
 
