--- a/oinarrizko_app_maketa/src/style.css
+++ b/oinarrizko_app_maketa/src/style.css
@@ -1,7 +1,7 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css";
 
 *{
-	font-family: helvetica;
+	font-family: sans-serif;
 }
 
 @font-face {
@@ -52,7 +52,7 @@ width: 400px;
   position: relative;
 
   left: 50%;*/
-  margin-top:-9px;
+  margin-top:-6.5px;
 
   background-color: black;
   box-shadow: 1px 1px 2px black;
@@ -69,7 +69,6 @@ width: 400px;
 }
 
 .buttonB:before {
-  font-family: HeydingsControlsRegular;
   font-size: 20px;
   position: relative;
   content: attr(data-icon);
@@ -83,7 +82,7 @@ width: 400px;
 
 
 .buttonB, .timer {
-  height: 38px;
+  height: 40px;
   line-height: 19px;
   box-shadow: inset 0 -5px 25px rgba(0,0,0,0.3);
   border-right: 1px solid #333;
@@ -105,9 +104,8 @@ width: 400px;
 }
 
 .timer {
-  line-height: 38px;
-  font-size: 10px;
-  font-family: monospace;
+  line-height: 40px;
+  font-size: 12px;
   text-shadow: 1px 1px 0px black;
   color: white;
   flex: 5;
@@ -120,7 +118,7 @@ width: 400px;
   left: 0;
   top: 0;
   width: 0;
-  height: 38px;
+  height: 40px;
   z-index: 2;
 }
 
